--- a/윤현서/jpashop/jpashop/build.gradle
+++ b/윤현서/jpashop/jpashop/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
 }
 
 tasks.named('test') {
